--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-/nbproject/
+# Created by https://www.gitignore.io/api/tags
+
+### Tags ###
+# Ignore tags created by etags, ctags, gtags (GNU global) and cscope
+TAGS
+!TAGS/
+tags
+!tags/
+.tags
+.tags1
+gtags.files
+GTAGS
+GRTAGS
+GPATH
+cscope.files
+cscope.out
+cscope.in.out
+cscope.po.out
