--- a/templates/textlint/prh.yml
+++ b/templates/textlint/prh.yml
@@ -1,117 +1,6 @@
 version: 1
+imports:
+  - rules/typo.yml
+  - rules/terms_consistently.yml
+  - rules/open.yml
 rules:
-  # typo
-  - expected: する
-    pattern:  刷る
-  - expected: の
-    pattern:  のの
-  # 開き
-  - expected: いえ
-    pattern:  言え
-  - expected: さまざま
-    pattern:  様々
-  - expected: 致$1
-    patterns: いた(す|します)
-  - expected: いただく
-    pattern:  頂く
-  - expected: ご存じ
-    pattern:  ご存知
-  - expected: ころ
-    pattern:  頃
-  - expected: さきほど
-    pattern:  先程
-  - expected: ぜひ
-    pattern:  是非
-  - expected: たくさん
-    pattern:  沢山
-  - expected: ただ
-    pattern:  只
-  - expected: など
-    pattern:  等
-  - expected: ならびに
-    pattern:  並びに
-  - expected: そば
-    pattern:  側
-  - expected: ため
-    pattern:  為
-  - expected: まず
-    pattern:  先ず
-  - expected: また
-    pattern:  又
-  - expected: まで
-    pattern:  迄
-  - expected: もっとも
-    pattern:  尤も
-  # 良い のまま開いてない場合も結構ある
-  - expected: よい
-    pattern:  良い
-  - expected: もつ
-    pattern:  持つ
-  - expected: とおり
-    pattern:  通り
-  - expected: 他の
-    pattern:  ほかの
-  - expected: すでに
-    pattern:  既に
-  - expected: 分かる
-    pattern:  わかる
-  - expected: すべて
-    pattern:  全て
-  - expected: たとえば
-    pattern:  例えば
-  - expected: $1中
-    pattern:  /(その)なか/
-  - expected: きれい
-    pattern:  綺麗
-  - expected: こと
-    pattern:  /事(?!情|項|件|前|後|例)/
-  - expected: $1とき
-    pattern:  /(の)時(?!点|代|項|実|間)/
-    specs:
-      - from: その時
-        to:   そのとき
-      - from: 同時
-        to:   同時
-      - from: 実行時
-        to:   実行時
-      - from: 利用時
-        to:   利用時
-      - from: 開発時
-        to:   開発時
-      - from: 執筆時
-        to:   執筆時
-  - expected: でき$1
-    pattern:  /出来(る|て|た|ま|上が)/
-    specs:
-      - from: 出来上がった
-        to:   でき上がった
-  - expected: したがって
-    pattern:  従って
-  - expected: $1ように
-    pattern:  /(の)様に/
-  - expected: 次$1
-    pattern:  /以下(の|に)/
-    specs:
-      - from: 以下の
-        to:   次の
-      - from: 以下に
-        to:   次に
-      - from: 次回
-        to:   次回
-  - expected: かかわらず
-    pattern:  関わらず
-  - expected: なる
-    pattern:  成る
-  - expected: お勧め
-    pattern:  おすすめ
-  - expected: $1あとで
-    pattern:  /(して|した|、)後で/
-    specs:
-      - from: して後で
-        to:   してあとで
-  - expected: なぜ
-    pattern:  何故
-  - expected: ゆえに
-    pattern:  故に
-  - expected: うまく
-    pattern:  巧く
