--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,6 @@
+[user]
+	name = wate
+	email = pc.poisoning@gmail.com
 [fetch]
 	prune = true
 [push]
@@ -5,7 +8,7 @@
 [pull]
 	rebase = true
 [core]
-	excludesfile = ~/.gitignore_global
+	excludesfile = /Users/wate/.gitignore_global
 	editor = vim
 	autocrlf = input
 [alias]
