--- a/.gitconfig
+++ b/.gitconfig
@@ -23,6 +23,8 @@
 	ci = commit
 	ca = commit --amend
 	st = status -s
+	sba = "!f() { git subtree add --prefix=$2 $1 master --squash ;}; f"
+	sbu = "!f() { git subtree pull --prefix=$2 $1 master --squash ;}; f"
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %Cblue<%an>%Creset' --abbrev-commit --date=relative --all --decorate
 	ll = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
 	lsw = log --pretty=format:'%Cgreen(%ci) %Cblue<%an>%Creset %Cred%h%Creset %s' --grep
