--- a/.ansible.cfg
+++ b/.ansible.cfg
@@ -1,3 +1,7 @@
 [defaults]
 module_lang=ja_JP.UTF-8
 hash_behaviour=merge
+
+[ssh_connection]
+ansible_ssh_executable = '/usr/local/bin/assh wrapper ssh'
+
