--- a/.ansible.cfg
+++ b/.ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 module_lang=ja_JP.UTF-8
 hash_behaviour=merge
+retry_files_enabled = False
 
 [ssh_connection]
 ansible_ssh_executable = '/usr/local/bin/assh wrapper ssh'
