--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,11 @@
   rebase = True
 [push]
   default = simple
+[filter "lfs"]
+  smudge = git-lfs smudge -- %f
+  process = git-lfs filter-process
+  required = true
+  clean = git-lfs clean -- %f
 [alias]
   au = add --update
   aa = add --all
