--- a/setup_mac.yml
+++ b/setup_mac.yml
@@ -104,6 +104,7 @@
       - ansible_tools
       - serverspec
     npm_packages:
+      - yarn
       - typescript
       - typson
       - codeceptjs
