--- a/setup_mac.yml
+++ b/setup_mac.yml
@@ -66,6 +66,7 @@
         bash_completion: packer
       - name: vagrant-completion
         bash_completion: vagrant
+      - name: tig
       - name: exa
       - name: remarshal
       - name: assh
