--- a/setup_mac.yml
+++ b/setup_mac.yml
@@ -3,148 +3,9 @@
   gather_facts: no
   become: no
   connection: local
-  vars:
-    git_global_config:
-      - name: user.name
-        value: wate
-      - name: user.email
-        value: pc.poisoning@gmail.com
-      - name: core.autocrlf
-        value: input
-      - name: core.excludesfile
-        value: ~/.gitignore
-      - name: core.attributesfile
-        value: ~/.gitattributes
-      - name: fetch.prune
-        value: true
-      - name: pull.rebase
-        value: true
-    homebrew_taps:
-      - name: homebrew/dupes
-      - name: homebrew/php
-      - name: homebrew/services
-      - name: caskroom/cask
-      - name: caskroom/fonts
-      - name: rcmdnk/file
-      - name: knqyf263/pet
-      - name: sacloud/usacloud
-      - name: sacloud/terraform-provider-sakuracloud
-      - name: sacloud/packer-builder-sakuracloud
-    homebrew_packages:
-      - name: bash-completion
-      - name: brew-file
-      - name: peco
-      - name: coreutils
-      - name: gnu-sed
-      - name: gnu-tar
-      - name: gawk
-      - name: pet
-        rcfile:
-          path: ~/.bashrc
-          content: |
-            function prev() {
-              PREV=$(fc -lrn | head -n 1 | awk '{$1=$1;print}')
-              sh -c "pet new `printf %q "$PREV"`"
-            }
-      - name: terraform
-      - name: packer
-      - name: usacloud
-        bash_completion: usacloud
-      - name: packer-builder-sakuracloud
-        symlink:
-          src: /usr/local/opt/packer-builder-sakuracloud/bin/packer-builder-sakuracloud
-          dest: ~/.packer.d/plugins/packer-builder-sakuracloud
-      - name: terraform-provider-sakuracloud
-        symlink:
-          src: /usr/local/bin/terraform-provider-sakuracloud
-          dest: ~/.terraform.d/plugins/terraform-provider-sakuracloud
-      - name: terraform-inventory
-      - name: packer-completion
-        bash_completion: packer
-      - name: vagrant-completion
-        bash_completion: vagrant
-      - name: tig
-      - name: editorconfig
-      - name: exa
-      - name: remarshal
-      - name: assh
-      - name: embulk
-      - name: clamav
-      # PHP
-      - name: php71
-      - name: php71-opcache
-      - name: php71-phalcon
-      - name: php71-intl
-      - name: php71-yaml
-      - name: composer
-      - name: codeception
-      - name: php-code-sniffer
-      - name: deployer
-      - name: php-cs-fixer
-      - name: pdepend
-      - name: phpcpd
-      - name: phpdocumentor
-      - name: phpmetrics
-      - name: phpmd
-      - name: phploc
-      - name: pdepend
-      - name: wp-cli
-    homebrew_cask_packages:
-      - name: netbeans-php
-      - name: vagrant
-      - name: font-ricty-diminished
-      - name: font-noto-serif-cjk-jp
-      - name: font-noto-sans-cjk-jp
-      - name: font-source-han-code-jp
-      - name: font-fira-code
-    aliases:
-      - name: ls
-        command: "exa"
-      - name: ll
-        command: "exa -l --git"
-      - name: la
-        command: "exa -la --git"
-      - name: ssh
-        command: "assh wrapper ssh"
-      - name: sed
-        command: "gsed"
-      - name: tr
-        command: "gtr"
-      - name: date
-        command: "gdate"
-      - name: ln
-        command: "gln"
-      - name: wc
-        command: "gwc"
-      - name: tar
-        command: "gtar"
-      - name: awk
-        command: "gawk"
-    gem_packages:
-      - ansible_spec
-      - serverspec
-      - wpscan
-      - test-kitchen
-      - kitchen-ansible
-      - kitchen-vagrant
-      - kitchen-verifier-serverspec
-    npm_packages:
-      - yarn
-      - typescript
-      - typson
-      - codeceptjs
-      - browser-sync
-      - newman
-      - eslint
-      - stylelint
-      - stylelint-scss
-      - textlint
-      - jsonlint
-      - tslint
-      - js-beautify
-      - stylefmt
-      - csscomb
   tasks:
+    - name: include variable file
+      include_vars: mac_vars.yml
     - name: Update homebrew and upgrade all packages
       homebrew:
         update_homebrew: yes
@@ -158,7 +19,6 @@
     - name: Ensure brew tap is installed
       homebrew_tap:
         name: "{{ item.name }}"
-        state: present
       with_items: "{{ homebrew_taps }}"
     - name: Ensure Homebrew packages is installed
       homebrew:
@@ -168,70 +28,79 @@
     - name: Ensure Homebrew cask packages is installed
       homebrew_cask:
         name: "{{ item.name }}"
-        state: present
         update_homebrew: true
       with_items: "{{ homebrew_cask_packages }}"
     - name: update brew cask packages
       command: brew-file cask_upgrade -C
+      when: "'brew-file' in homebrew_packages|map(attribute='name')|list"
     - name: Ensure .bashrc in BREW_PREFIX variable
       lineinfile:
         dest: ~/.bashrc
         line: 'BREW_PREFIX=$(brew --prefix)'
+    - name: Ensure load secret environment variable setting
+      blockinfile:
+        marker: "# {mark} secret environment variables ANSIBLE MANAGED BLOCK"
+        dest: ~/.bashrc
+        block: |
+          if [ -f ~/.secret ]; then
+              source ~/.secret
+          fi
+    - name: Ensure .bashrc in load bash-completion
+      lineinfile:
+        dest: ~/.bashrc
+        line: '[ -f "${BREW_PREFIX}"/etc/bash_completion ] && source /usr/local/etc/bash_completion'
+      when: "'bash-completion' in homebrew_packages|map(attribute='name')|list"
     - name: Ensure load bash completion file
       lineinfile:
         dest: ~/.bashrc
         line: '[ -f "${BREW_PREFIX}"/etc/bash_completion.d/{{ item.bash_completion }} ] && source "${BREW_PREFIX}"/etc/bash_completion.d/{{ item.bash_completion }}'
-      when: item.bash_completion is defined
-      with_items: "{{ homebrew_packages }}"
-    - name: Ensure terraform setting
+      with_items: "{{ homebrew_packages|selectattr('bash_completion', 'defined')|list }}"
+    - name: Ensure rcfile setting
       blockinfile:
         create: true
         marker: "# {mark} {{ item.name }} ANSIBLE MANAGED BLOCK"
-        dest: "{{ item.rcfile.path }}"
+        dest: "{{ item.rcfile.path|default('~/.bashrc') }}"
         block: "{{ item.rcfile.content }}"
-      when: item.rcfile is defined
-      with_items: "{{ homebrew_packages }}"
-    - name: Ensure packer plugin directory
+      with_items: "{{ homebrew_packages|selectattr('rcfile', 'defined')|list }}"
+    - name: Ensure brew package directory
       file:
-        path: ~/.packer.d/plugins
+        path: "{{ item.directory }}"
         state: directory
-      when: "'packer' in homebrew_packages"
-    - name: Ensure terraform plugin directory
-      file:
-        path: ~/.terraform.d/plugins
-        state: directory
-      when: "'terraform' in homebrew_packages"
+      with_items: "{{ homebrew_packages|selectattr('directory', 'defined')|list }}"
     - name: Ensure brew package symlink
       file:
         src: "{{ item.symlink.src }}"
         path: "{{ item.symlink.dest }}"
         state: link
-      when: item.symlink is defined
-      with_items: "{{ homebrew_packages }}"
+      with_items: "{{ homebrew_packages|selectattr('symlink', 'defined')|list }}"
     - name: Ensure .bashrc command alias
       lineinfile:
         dest: ~/.bashrc
         line: 'alias {{ item.name }}="{{ item.command }}"'
       with_items: "{{ aliases }}"
     # ClamAV
-    - name: create clamav viruse database directory
-      file:
-        path: /usr/local/var/lib/clamav
-        state: directory
-    - name: create freshclam config file
-      lineinfile:
-        path: /usr/local/etc/clamav/freshclam.conf
-        regexp: '^#?DatabaseDirectory '
-        line: "DatabaseDirectory /usr/local/var/lib/clamav"
-        create: yes
-    - name: update viruse database
-      command: freshclam
+    - block:
+      - name: create clamav viruse database directory
+        file:
+          path: /usr/local/var/lib/clamav
+          state: directory
+      - name: create freshclam config file
+        lineinfile:
+          path: /usr/local/etc/clamav/freshclam.conf
+          regexp: '^#?DatabaseDirectory '
+          line: "DatabaseDirectory /usr/local/var/lib/clamav"
+          create: yes
+      - name: update viruse database
+        command: freshclam
+      when: "'clamav' in homebrew_packages|map(attribute='name')|list"
+    # gem
     - name: install gem packages
       gem:
         name: "{{ item }}"
         user_install: no
         state: latest
       with_items: "{{ gem_packages }}"
+    # npm
     - name: install npm packages
       npm:
         name: "{{ item }}"
