--- a/.gitattributes
+++ b/.gitattributes
@@ -1,18 +1,16 @@
-*.c diff=cpp
-*.h diff=cpp
-*.cpp diff=cpp
-*.hpp diff=cpp
-*.cs diff=csharp
-*.m diff=objc
-*.java diff=java
-*.html diff=html
-*.xml diff=html
-*.pl diff=perl
-*.pm diff=perl
-*.t diff=perl
-*.php diff=php
-*.ptml diff=php
-*.py diff=python
-*.rb diff=ruby
-*.js diff=java
-*.json diff=json
+*.jpg binary
+*.png binary
+*.gif binary
+
+*.py -text=auto
+*.rb -text=auto
+*.java -text=auto
+*.html -text=auto
+*.htm -text=auto
+*.css -text=auto
+*.scss -text=auto
+*.sass -text=auto
+*.js -text=auto
+*.sql -text=auto
+*.php -text=auto
+*.lua -text=auto
