--- a/mac_vars.yml
+++ b/mac_vars.yml
@@ -125,6 +125,8 @@ homebrew_cask_packages:
   - name: font-noto-sans-cjk-jp
   - name: font-source-han-code-jp
   - name: font-fira-code
+  - name: libreoffice
+  - name: libreoffice-language-pack
   - name: avira-antivirus
 
 aliases:
