--- a/setup_mac.yml
+++ b/setup_mac.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: localhost
-  gather_facts: no
+  gather_facts: yes
   become: no
   connection: local
   tasks:
@@ -67,31 +67,31 @@
       lineinfile:
         dest: ~/.bashrc
         line: '[ -f "${BREW_PREFIX}"/etc/bash_completion.d/{{ item.bash_completion }} ] && source "${BREW_PREFIX}"/etc/bash_completion.d/{{ item.bash_completion }}'
-      with_items: "{{ homebrew_packages|selectattr('bash_completion', 'defined')|list }}"
+      with_items: "{{ homebrew_packages|selectattr('bash_completion', 'defined')|selectattr('state', 'undefined')|list }}"
     - name: Ensure rcfile setting
       blockinfile:
         create: true
         marker: "# {mark} {{ item.name }} ANSIBLE MANAGED BLOCK"
         dest: "{{ item.rcfile.path|default('~/.bashrc') }}"
         block: "{{ item.rcfile.content }}"
-      with_items: "{{ homebrew_packages|selectattr('rcfile', 'defined')|list }}"
+      with_items: "{{ homebrew_packages|selectattr('rcfile', 'defined')|selectattr('state', 'undefined')|list }}"
     - name: Ensure brew package directory
       file:
         path: "{{ item.directory }}"
         state: directory
-      with_items: "{{ homebrew_packages|selectattr('directory', 'defined')|list }}"
+      with_items: "{{ homebrew_packages|selectattr('directory', 'defined')|selectattr('state', 'undefined')|list }}"
     - name: Ensure brew package symlink
       file:
         src: "{{ item.symlink.src }}"
         path: "{{ item.symlink.dest }}"
         state: link
-      with_items: "{{ homebrew_packages|selectattr('symlink', 'defined')|list }}"
+      with_items: "{{ homebrew_packages|selectattr('symlink', 'defined')|selectattr('state', 'undefined')|list }}"
     - name: Ensure .bashrc command alias
       lineinfile:
         dest: ~/.bashrc
         line: 'alias {{ item.name }}="{{ item.command }}"'
       with_items: "{{ aliases }}"
-    # ClamAV
+    # # ClamAV
     - block:
       - name: create clamav viruse database directory
         file:
@@ -106,21 +106,35 @@
       - name: update viruse database
         command: freshclam
       when: "'clamav' in homebrew_packages|map(attribute='name')|list"
+    # pip
+    - name: orverwrite ansible python path
+      set_fact:
+        ansible_python_interpreter: "{{ ansible_user_dir }}/.pyenv/shims/python"
+      when: "'pyenv' in homebrew_packages|map(attribute='name')|list"
+    - name: Ensure pip packages
+      pip:
+        name: "{{ item.name }}"
+        state: "{{ item.state|default('latest') }}"
+      with_items: "{{ pip_packages }}"
+      register: result
+    - name: execute pyenv rehash
+      command: pyenv rehash
+      when: "'pyenv' in homebrew_packages|map(attribute='name')|list and result|changed"
     # gem
-    - name: install gem packages
+    - name: Ensure gem packages
       gem:
-        name: "{{ item.name if item is mapping else item }}"
+        name: "{{ item.name }}"
         user_install: no
-        state: "{{ item.state if item is mapping and item.state is defined else 'latest' }}"
+        state: "{{ item.state|default('latest') }}"
       with_items: "{{ gem_packages }}"
       register: result
     - name: cleanup gem packages
       command: gem cleanup
       when: result|changed
     # npm
-    - name: install npm packages
+    - name: Ensure npm packages
       npm:
-        name: "{{ item.name if item is mapping else item }}"
+        name: "{{ item.name }}"
         global: yes
-        state: "{{ item.state if item is mapping and item.state is defined else 'latest' }}"
+        state: "{{ item.state|default('latest') }}"
       with_items: "{{ npm_packages }}"
