--- a/.ansible.cfg
+++ b/.ansible.cfg
@@ -3,6 +3,8 @@ module_lang = ja_JP.UTF-8
 hash_behaviour = merge
 retry_files_enabled = False
 
+[galaxy]
+role_skeleton = ~/Project/role_skeleton/data
+
 [ssh_connection]
 ansible_ssh_executable = '/usr/local/bin/assh wrapper ssh'
-
