--- a/mac_vars.yml
+++ b/mac_vars.yml
@@ -210,6 +210,7 @@ npm_packages:
   - name: stylelint-scss
   - name: webpack
   - name: vue-cli
+  - name: yarn
   - name: js-beautify
   - name: stylefmt
   - name: csscomb
