--- a/mac_vars.yml
+++ b/mac_vars.yml
@@ -63,12 +63,16 @@ homebrew_packages:
     directory: ~/.packer.d/plugins
   - name: usacloud
     bash_completion: usacloud
+  - name: vultr
+  - name: docker-machine
   - name: docker-machine-sakuracloud
+  - name: docker-machine-driver-vultr
   - name: packer-builder-sakuracloud
     symlink:
       src: /usr/local/opt/packer-builder-sakuracloud/bin/packer-builder-sakuracloud
       dest: ~/.packer.d/plugins/packer-builder-sakuracloud
-  - name: terraform-provider-sakuracloud
+  - name: vagrant-completion
+    bash_completion: vagrant
   - name: packer-completion
     bash_completion: packer
   - name: vagrant-completion
@@ -179,9 +183,6 @@ gem_packages:
   - name: bundler
   - name: serverspec
   - name: liquid
-  - name: ansible_spec
-    state: absent
-  - name: wpscan
   - name: kitchen-vagrant
   - name: kitchen-ec2
     state: absent
