--- a/.ansible.cfg
+++ b/.ansible.cfg
@@ -2,6 +2,7 @@
 module_lang = ja_JP.UTF-8
 hash_behaviour = merge
 retry_files_enabled = False
+ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
 
 [galaxy]
 role_skeleton = ~/Project/role_skeleton/data
